added gc logs handling